@@ -12,22 +12,21 @@ import com.gooddata.GoodDataRestException;
 import com.gooddata.PollResult;
 import com.gooddata.SimplePollHandler;
 import com.gooddata.gdc.UriResponse;
+import com.gooddata.md.Obj;
 import com.gooddata.md.report.Report;
 import com.gooddata.md.report.ReportDefinition;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.ClientHttpResponse;
+import org.springframework.util.FileCopyUtils;
+import org.springframework.web.client.ResponseExtractor;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.UriComponentsBuilder;
-import org.springframework.web.util.UriTemplate;
+import org.springframework.web.util.DefaultUriTemplateHandler;
 
 import java.io.IOException;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
-import java.net.URLDecoder;
-import java.util.Map;
 
 import static com.gooddata.util.Validate.notNull;
 import static org.springframework.http.HttpMethod.GET;
@@ -46,7 +45,7 @@ public class ReportService extends AbstractService {
     }
 
     /**
-     * Export the given report definition in the given format to the given output strream
+     * Export the given report definition in the given format to the given output stream
      * @param reportDefinition report definition
      * @param format export format
      * @param output target
@@ -61,68 +60,35 @@ public class ReportService extends AbstractService {
         return exportReport(request, format, output);
     }
 
-    public void exportReportRawCsv(final Report report, final OutputStream output) {
-        final String uri = restTemplate.postForObject(RAW_CSV_EXPORTING_URI, new ExecuteReport(report.getUri()), UriResponse.class, "b27pwwvlz5fnvdpiy4w3q257t1yvbw18").getUri();
-        try {
-            //URL url = new URL(uri);
-            //System.out.println("url: " + url);
+    public void exportReportRawCsvHost(final Report report, final OutputStream output) {
+        final String projectId = Obj.OBJ_TEMPLATE.match(report.getUri()).get("projectId");
+        final String taskUri = restTemplate.postForObject(RAW_CSV_EXPORTING_URI, new ExecuteReport(report.getUri()), UriResponse.class, projectId).getUri();
+        final String baseUrl = ((DefaultUriTemplateHandler) restTemplate.getUriTemplateHandler()).getBaseUrl();
+        final URI uri = URI.create(baseUrl + taskUri);
+        System.out.println(uri);
+        while (!restTemplate.execute(uri, GET, noopRequestCallback, new ResponseExtractor<Boolean>() {
 
-            final String uriDecoded = URLDecoder.decode(uri, "UTF-8");
-            final URI uriO = URI.create("https://zebroids.intgdc.com" + uri);
-//            final URI uriOO = new URI(uri);
+            @Override
+            public Boolean extractData(final ClientHttpResponse response) throws IOException {
+                final String contentType = response.getHeaders().get("Content-Type").get(0);
+                System.out.println("Content-Type:" + contentType);
+                if (contentType.startsWith("application/json")) {
+                    response.close();
+                    return false;
+                } else if (contentType.startsWith("text/csv")) {
+                    FileCopyUtils.copy(response.getBody(), output);
+                    return true;
+                } else {
+                    throw new ReportException("Unable to export report.");
+                }
+            }
 
-            System.out.println("raw: " + uri);
-            System.out.println("uri: " + uriO);
-            System.out.println("dec: " + uriDecoded);
-            UriTemplate uriTemplateFull = new UriTemplate("/gdc/projects/{projectId}/execute/raw/{executeId}?q={parQ}&c={parC}");
-            UriTemplate uriTemplate = new UriTemplate("/gdc/projects/{projectId}/execute/raw/{executeId}");
-
-            Map<String, String> params = uriTemplateFull.match(uri);
-
-            params.put("parQ", URLDecoder.decode(params.get("parQ"), "UTF-8"));
-            params.put("parC", URLDecoder.decode(params.get("parC"), "UTF-8"));
-
-            final URI uriXX = UriComponentsBuilder
-                    .fromUriString(uriTemplate.expand(params).toString())
-                    .queryParam("q", params.get("parQ"))
-                    .queryParam("c", params.get("parC"))
-                    .build()
-                    .toUri();
-
-//            System.out.println(params);
-
-            restTemplate.execute(uriO, GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-
-
-            //final URI uriDDD = UriComponentsBuilder.fromUriString(uri).build().toUri();
-
-            //final String configuredPath = serverUri.getPath();
-//            final String resolvedPath = (configuredPath == null) ? uri.getPath() : configuredPath + uri.getPath(); // GD-23442 - resolve path
-//            final UriComponentsBuilder builder = UriComponentsBuilder.newInstance();
-//            builder
-//                    .uri(URI.create("https://zebroids.intgdc.com"))
-//                    .replacePath("/gdc/projects/b27pwwvlz5fnvdpiy4w3q257t1yvbw18/execute/raw/5f6736081c5468a760b8b689bffce87e00000152eec84d910000004c")
-//                    .query(uriO.getRawQuery())
-//                    .fragment(uriO.getRawFragment());   // raw form means do not 'decode'
-//
-//            final URI absoluteUri = builder.build(true).toUri(); // encode = true means do not encode URI components
-
-            //System.out.println("d e: " + URLEncoder.encode(uriDecoded, "UTF-8"));
-            //System.out.println("e d: " + URLEncoder.encode(URLDecoder.decode(uriDecoded, "UTF-8"), "UTF-8"));
-
-           // restTemplate.execute(uri, GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-//            restTemplate.execute(uriDecoded, GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-            //restTemplate.execute(uriO, GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-//            restTemplate.execute(uriTemplate.toString(), GET, noopRequestCallback, new OutputStreamResponseExtractor(output), params);
-//            restTemplate.execute(uriTemplate.expand(params), GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-//            restTemplate.execute(absoluteUri, GET, noopRequestCallback, new OutputStreamResponseExtractor(output));
-
-//            URL url = new URL("https://zebroids.intgdc.com" + uri);
-
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
+        })) {
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
         }
     }
 
